--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,3 @@
-<app-formulario-pasajero></app-formulario-pasajero>
-<app-formulario-vuelo></app-formulario-vuelo>
+<app-navbar></app-navbar>
+<router-outlet></router-outlet>
+<app-footer></app-footer>
