--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,2 +1,10 @@
-<p>home works!</p>
-<app-formulario-vuelo></app-formulario-vuelo>
+<div class="container-fluid hero-container p-0">
+  <img
+    src="../../assets/img/plane-hero.jpg"
+    class="img-fluid hero-banner rounded"
+    alt=""
+  />
+  <div class="container form-container">
+    <app-formulario-vuelo></app-formulario-vuelo>
+  </div>
+</div>
