--- a/src/app/vuelos/vuelos.component.html
+++ b/src/app/vuelos/vuelos.component.html
@@ -1,6 +1,6 @@
 <app-formulario-vuelo></app-formulario-vuelo>
 <div class="card">
   <div class="card-body" *ngFor="let vuelo of vuelosLista">
-    {{ vuelo}}
+    <p>Soy una card bonita</p>
   </div>
 </div>
