--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,2 +1,3 @@
 <p>home works!</p>
-<app-formulario-vuelo></app-formulario-vuelo>
+<!-- <app-formulario-vuelo></app-formulario-vuelo> -->
+<app-formulario-vuelo-v2></app-formulario-vuelo-v2>
