--- a/src/app/vuelos/vuelos.component.html
+++ b/src/app/vuelos/vuelos.component.html
@@ -1,4 +1,5 @@
 <app-formulario-vuelo></app-formulario-vuelo>
+<app-formulario-vuelo-v2></app-formulario-vuelo-v2>
 <div class="card">
   <div class="card-body" *ngFor="let vuelo of vuelosLista">
     {{ vuelo}}
