Estilo: elimina la posicion relativa del form

--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,8 +1,6 @@
-.hero-container {
-  position: relative;
-}
+// .hero-container {
+//   position: relative;
+// }
 .form-container {
-  position: absolute;
-  top: 50%;
-  left: 5%;
+  margin: 20px auto;
 }
