--- a/src/app/formularios/formulario-vuelo-v2/formulario-vuelo-v2.component.html
+++ b/src/app/formularios/formulario-vuelo-v2/formulario-vuelo-v2.component.html
@@ -24,7 +24,7 @@
                     <div class="col-md-4">
                         <div>
                             <label for="fechaF">Fecha: </label>
-                            <input class="form-control" type="date" name="fechaF" #fechaF="ngModel" [(ngModel)]="fecha" required>
+                            <input class="form-control" type="date" name="fechaF" #fechaF="ngModel" [(ngModel)]="fecha" min="{{today}}" max="{{maxDate}}">
                         </div>
                     </div>
                 </div>
@@ -47,19 +47,19 @@
                 <div *ngIf="errorPasajeros==-1 || errorPasajeros==1">
                     <label for="fechaF">Infantes: </label>
                     <input class="form-control" type="number" name="infantesF" #infantesF="ngModel" [(ngModel)]="pasajeros.infantes" (change)="comprobarPasajeros($event)" max="{{max_infantes}}">
-                </div>  
+                </div>
                 <div *ngIf="errorPasajeros==2">
                     <label for="fechaF">Infantes: </label>
                     <input class="form-control is-invalid" type="number" name="infantesF" #infantesF="ngModel" [(ngModel)]="pasajeros.infantes" (change)="comprobarPasajeros($event)" max="{{max_infantes}}">
-                    <div class="invalid-feedback">El numero de infantes no puede ser mayor al numero de adultos</div>           
-                </div>     
-                           
-                
+                    <div class="invalid-feedback">El numero de infantes no puede ser mayor al numero de adultos</div>
+                </div>
+
+
             </div>
         </div>
         <div class="text-center">
             <input type="submit" [disabled]="!ventaForm.form.valid || errorPasajeros!=-1" value="BUSCAR VUELO" class="btn btn-primary">
-        </div>          
+        </div>
     </form>
     <br>
     <br>
@@ -85,7 +85,7 @@
             <div class="row">
                 <h5>Distancia aproximada: {{vuelo.distancia_KM}} KM</h5>
             </div>
-        </div>        
+        </div>
     </div>
 </div>
 
