--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,7 @@
 <app-navbar></app-navbar>
-<router-outlet></router-outlet>
-<app-footer></app-footer>
+<div class="container" id="base-content">
+    <router-outlet></router-outlet>
+</div>
+<div id="footer">
+    <app-footer></app-footer>
+</div>
