Estilos: re-estilización de home, formulario y app

--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,8 +1,8 @@
-.hero-container {
-  position: relative;
-}
-.form-container {
-  position: absolute;
-  top: 25%;
-  left: 10%;
-}
+// .hero-container {
+//   position: relative;
+// }
+// .form-container {
+//   position: absolute;
+//   top: 25%;
+//   left: 5%;
+// }
