Estructura: cambios menores estructura del codigo

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid hero-container p-0">
   <img
-    src="../../assets/img/plane-hero.jpg"
+    src="../../assets/img/plane-hero.png"
     class="img-fluid hero-banner rounded"
     alt=""
   />
