Mejora estructura codigo y añade fa en form vuelo

--- a/src/app/formularios/formulario-vuelo-v2/formulario-vuelo-v2.component.html
+++ b/src/app/formularios/formulario-vuelo-v2/formulario-vuelo-v2.component.html
@@ -154,9 +154,9 @@
           <h2>{{ vuelo.lugar_origen_id.Ciudad }}</h2>
           <h4>{{ vuelo.lugar_origen_id.nombreAeropuerto }}</h4>
         </div>
-        <!-- <div class="col-md-2">
-                    <i class="fa-light fa-plane"></i>
-                </div> -->
+        <div class="col-md-2">
+          <fa-icon [icon]="faPlane"></fa-icon>
+        </div>
         <div class="col-md-2">
           <h2>{{ vuelo.lugar_destino_id.Ciudad }}</h2>
           <h4>{{ vuelo.lugar_destino_id.nombreAeropuerto }}</h4>
