--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,8 +1,8 @@
-// #base-content{
-//     min-height: 515px;
-// }
+#base-content{
+    min-height: 515px;
+}
 #footer{
     width: 100%;
-    position: absolute;
-    bottom: 0px;
+    // min-height: 510px;
+    // position: relative;
 }
