--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,9 +1,9 @@
 <div class="container-fluid hero-container p-0">
-  <img
+  <!-- <img
     src="../../assets/img/plane-hero.jpg"
     class="img-fluid hero-banner rounded"
     alt=""
-  />
+  /> -->
   <div class="container form-container">
     <!-- <app-formulario-vuelo></app-formulario-vuelo> -->
     <app-formulario-vuelo-v2></app-formulario-vuelo-v2>
