--- a/src/app/formularios/formulario-vuelo-v2/formulario-vuelo-v2.component.html
+++ b/src/app/formularios/formulario-vuelo-v2/formulario-vuelo-v2.component.html
@@ -64,6 +64,19 @@
           #pasajerosF="ngModel"
           [(ngModel)]="pasajeros"
         />
+        <div>
+          <label for="fechaF">Adultos Mayores: </label>
+          <input
+            class="form-control"
+            type="number"
+            name="adultosMayoresF"
+            #adultosF="ngModel"
+            [(ngModel)]="pasajeros.adultos_mayores"
+            (change)="comprobarPasajeros($event)"
+            max="{{ max_adultos_mayores }}"
+          />
+          <small>Los pasajeros mayores a 65 años tienen un 50% de descuento en la compra de su boleto</small>
+        </div>
         <div *ngIf="errorPasajeros == -1 || errorPasajeros == 2">
           <label for="fechaF">Adultos: </label>
           <input
@@ -129,6 +142,7 @@
           <div class="invalid-feedback">
             El numero de infantes no puede ser mayor al numero de adultos
           </div>
+          <small>Los niños menos a 2 años de edad no pagan ningun cargo por el boleto</small>
         </div>
       </div>
     </div>
@@ -150,23 +164,33 @@
       *ngFor="let vuelo of vuelos"
     >
       <div class="row">
-        <div class="col-md-2">
-          <h2>{{ vuelo.lugar_origen_id.Ciudad }}</h2>
-          <h4>{{ vuelo.lugar_origen_id.nombreAeropuerto }}</h4>
+        <div class="col-md-6">
+            <div class="row">
+                <div class="col-md-4">
+                    <h2>{{ vuelo.lugar_origen_id.Ciudad }}</h2>
+                    <h4>{{ vuelo.lugar_origen_id.nombreAeropuerto }}</h4>
+                </div>
+                <div class="col-md-4">
+                    <!-- <fa-icon [icon]="faPlane"></fa-icon> -->
+                </div>
+                <div class="col-md-4">
+                    <h2>{{ vuelo.lugar_destino_id.Ciudad }}</h2>
+                    <h4>{{ vuelo.lugar_destino_id.nombreAeropuerto }}</h4>
+                </div>
+            </div>
         </div>
-        <div class="col-md-2">
-          <!-- <fa-icon [icon]="faPlane"></fa-icon> -->
-        </div>
-        <div class="col-md-2">
-          <h2>{{ vuelo.lugar_destino_id.Ciudad }}</h2>
-          <h4>{{ vuelo.lugar_destino_id.nombreAeropuerto }}</h4>
-        </div>
-        <div class="col-md-8 text-end">
-          <h1>$ {{ vuelo.precio }}</h1>
-          <a class="btn btn-success" href="/datos-pasajero/{{ vuelo._id }}"
-            >Comprar</a
-          >
-        </div>
+        <div class="col-md-6">
+            <div class="row">
+                <div class="col-md-4"></div>
+                <div *ngFor="let precio of vuelo.precios" class="col-md-4 text-end" style="padding:10px;">
+                    <div class="card" style="padding:10px;">
+                        <h2>{{precio.nombre}}</h2>
+                        <h3>$ {{ precio.total }}</h3>
+                        <a class="btn btn-success" style="--bs-bg-opacity: 0.5;" href="/asientos/{{vuelo._id}}-{{precio.nombre}}-{{precio.asiento}}">Comprar</a>
+                    </div>                    
+                </div>
+            </div>
+        </div>  
       </div>
       <div class="row">
         <h5>Distancia aproximada: {{ vuelo.distancia_KM }} KM</h5>
