--- a/src/app/formularios/formulario-vuelo-v2/formulario-vuelo-v2.component.html
+++ b/src/app/formularios/formulario-vuelo-v2/formulario-vuelo-v2.component.html
@@ -144,10 +144,14 @@
   <br />
   <br />
   <div class="container" style="--bs-bg-opacity: 0.5; min-width: 75%">
+
     <div
       class="card boleto-card"
       style="margin-top: 10px; padding: 20px"
       *ngFor="let vuelo of vuelos"
+
+
+
     >
       <div class="row">
         <div class="col-md-2">
@@ -163,7 +167,7 @@
         </div>
         <div class="col-md-8 text-end">
           <h1>$ {{ vuelo.precio }}</h1>
-          <a class="btn btn-success" href="/datos-pasajero/{{ vuelo._id }}"
+          <a class="btn btn-success" href="/datos-pasajero/{{ vuelo._id }}" (click)="saveDataObject(vuelo)"
             >Comprar</a
           >
         </div>
