--- a/src/app/asientos/asientos.component.html
+++ b/src/app/asientos/asientos.component.html
@@ -10,16 +10,24 @@
     <div class="col-md-6">
       <h2>Información de los pasajeros</h2>
       <div *ngIf="pasajeros.adultos_mayores > 0" class="card">
-        <h2>adultos mayores</h2>
+        <div *ngFor="let pasajeroX of informacionPasajeros.adultos_mayores, index as i">
+          <input type="text" name="nombreP" #nombreP="ngModel" [(ngModel)]="pasajeroX.nombre">
+        </div>
       </div>
       <div *ngIf="pasajeros.adultos > 0" class="card">
-        <h2>adultos</h2>
+        <div *ngFor="let pasajeroX of informacionPasajeros.adultos">
+          <input type="text" name="nombreP" #nombreP="ngModel" [(ngModel)]="pasajeroX.nombre">
+        </div>
       </div>
       <div *ngIf="pasajeros.ninos > 0" class="card">
-        <h2>niños</h2>
+        <div *ngFor="let pasajeroX of informacionPasajeros.ninos">
+          <input type="text" name="nombreP" #nombreP="ngModel" [(ngModel)]="pasajeroX.nombre">
+        </div>
       </div>
       <div *ngIf="pasajeros.infantes > 0" class="card">
-        <h2>infantes</h2>
+        <div *ngFor="let pasajeroX of informacionPasajeros.infantes">
+          <input type="text" name="nombreP" #nombreP="ngModel" [(ngModel)]="pasajeroX.nombre">
+        </div>
       </div>
     </div>
   </div>
