carga de cookie

--- a/src/app/asientos/asientos.component.html
+++ b/src/app/asientos/asientos.component.html
@@ -12,7 +12,7 @@
             type="submit"
             [disabled]="!ventaForm.form.valid"
             value="Guardar Seleccion"
-            class="form-button fs-5 rounded"
+            class="btn btn-primary"
           />
         </div>
       </form>
@@ -183,7 +183,7 @@
         </div>
     </div>
     <div>
-      <button (click)="guardarPasajeros()"></button>
+      <button (click)="guardarPasajeros()" class="btn btn-primary">CONTINUAR</button>
     </div>
   </div>  
   
