--- a/src/app/asientos/asientos.component.html
+++ b/src/app/asientos/asientos.component.html
@@ -1,6 +1,7 @@
 <!-- <p class="display-5">Escoge tus asientos</p> -->
 
   <div class="row">
+    <div class="text-center"><h1>{{title}}</h1></div>
     <div class="col-md-6">
       <form #ventaForm="ngForm" (ngSubmit)="reservarAsientos(ventaForm)">
         <h2>Escoge tus asientos</h2>
